<resources>
    <string name="app_name">beMai Driver</string>

    <!--    Main Screen    -->
    <string name="login_term">Bằng việc đăng ký hoặc đăng nhập, bạn đã đồng ý với các Điều khoản dịch vụ và Chính sách bảo mật.</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Chưa có tài khoản? Đăng ký làm tài xế ngay</string>

    <string-array name="language_options">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string name="login_welcome">Hãy đăng nhập vào tài khoản của bạn</string>
    <string name="phone_number">Số điện thoại</string>

    <!--    Signup Screen   -->
    <string-array name="driver_type_options">
        <item>beMai Bike</item>
        <item>beMai Small</item>
        <item>beMai Medium</item>
        <item>beMai Large</item>
    </string-array>
    <string name="pick_avatar">Chọn ảnh</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="vehicle_info">Thông tin phương tiện</string>
    <string name="full_name">Họ và tên</string>
    <string name="driver_type">Loại tài xế</string>
    <string name="vehicle_name">Tên phương tiện</string>
    <string name="vehicle_color">Màu sắc phương tiện</string>
    <string name="vehicle_license_plate">Biển số xe</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="license_info">Thông tin giấy phép</string>
    <string name="driver_license">Ngày cấp Giấy phép lái xe</string>
    <string name="vehicle_registration">Ngày cấp giấy đăng ký xe</string>
    <string name="date_format">YYYY.MM.DD</string>
    <string name="select">Chọn</string>
    <string name="submit">Gửi</string>
    <string name="username">Tên đăng nhập hoặc số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="password_forgot">Quên mật khẩu</string>
    <string name="gender">Giới tính</string>
    <string name="otp_welcome">Hãy nhập mã OTP mà chúng tôi đã gửi đến</string>
    <string name="otp_verify">Xác thực</string>
    <string name="otp_receive">Chưa nhận được OTP?</string>
    <string name="otp_resend">Gửi lại mã</string>
    <string name="control">Điều khiển</string>
    <string name="account">Tài khoản</string>
    <string name="settings">Cài đặt</string>
    <string name="profile">Hồ sơ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="john_doe">Quái xế</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="active_status">Trạng thái hoạt động</string>
    <string name="dark_mode">Chế độ ban đêm</string>
    <string name="notification">Thông báo</string>
    <string name="priv_and_sec">Quyền riêng tư và Bảo mật</string>
    <string name="language">Ngôn ngữ</string>
    <string name="work_history">Lịch sử hoạt động</string>
    <string name="support_agent">Tổng đài hỗ trợ</string>
    <string name="logout">Đăng xuất</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="revenue">Thống kê</string>
    <string name="no_internet">Không có kết nối Internet</string>
    <string name="no_internet_detail">Bạn đã bị mất kết nối internet. Hãy đảm bảo kết nối tới internet để có thể sử dụng ứng dụng.</string>
    <string name="try_again">Thử lại</string>
    <string name="recent_noti">Thông báo gần đây</string>
    <string name="complete_ride">Bạn vừa hoàn thành cuốc xe mã số #00001</string>
    <string name="auto_accept">Tự động nhận chuyến</string>
    <string name="working_capital">Trung tâm doanh nghiệp</string>
    <string name="my_destination">Những điểm đến của tôi</string>
    <string name="more">Xem thêm</string>
    <string name="go_online">Bật hoạt động</string>
    <string name="ur_online">Bạn đang hoạt động</string>
    <string name="ur_offline">Bạn đang tắt hoạt động</string>
    <string name="go_offline">Tắt hoạt động</string>
    <string name="finding_ride">Đang tìm kiếm cuốc xe</string>
    <string name="payment_fee">Cước phí thanh toán</string>
    <string name="voucher_applied">Đã áp dụng ưu đãi</string>
    <string name="sample_note">Ghi chú: Đón tôi ở cổng B</string>
    <string name="distance_to_you">Cách bạn:</string>
    <string name="accept">Nhận cuốc</string>
    <string name="decline">Từ chối</string>
    <string name="auto_decline">Tự động từ chối sau:</string>
    <string name="order_detail">Thông tin chi tiết cuốc</string>
    <string name="chat">Nhắn tin</string>
    <string name="call">Gọi điện</string>
    <string name="pick_up">Đón khách</string>
    <string name="drop_off">Trả khách</string>
    <string name="navigate">Định vị</string>
    <string name="sample_info">GrabBike - 1 hành khách</string>
    <string name="payment_cash">Thanh toán tiền mặt</string>
    <string name="arriving">Đang đi</string>
    <string name="income">Thu nhập</string>
    <string name="revenue_summary">Tổng kết doanh thu</string>
    <string name="daily">Hàng ngày</string>
    <string name="weekly">Hàng tuần</string>
    <string name="history">Lịch sử</string>
    <string name="balance">Số dư</string>
    <string name="withdraw">Rút về tài khoản</string>
    <string name="receipt">Lịch sử giao dịch</string>
    <string name="complete_orders">5 đơn hàng đã hoàn tất</string>
    <string name="detail">Xem chi tiết</string>
    <string name="fetching">Đang khởi tạo dữ liệu</string>
    <string name="confirm_logout">Bạn đang thực hiện đăng xuất?</string>
    <string name="yes">Tiếp tục</string>
    <string name="no">Hủy</string>
    <string name="confirm_delete">Bạn đang thực hiện vô hiệu hóa tài khoản. Lưu ý rằng hành động này sẽ xóa toàn bộ dữ liệu và không thể hoàn tác</string>
    <string name="delete_acc">Xóa tài khoản</string>
    <string name="choose_language">Chọn ngôn ngữ</string>
    <string name="input_msg">Nhập tin nhắn...</string>
    <string name="auto_msg">Vui lòng đợi. Tôi sẽ đến đón bạn trong giât lát.</string>
    <string name="auto_msg2">Tôi đã gặp một số vấn đề nhỏ. Xin lỗi về sự bất tiện này.</string>
    <string name="auto_msg3">Xin lưu ý: Tôi sẽ đến trong khoảng 5 phút.</string>
</resources>