<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_welcome"
        android:layout_marginTop="5dp"/>
    
    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue"
        android:hint="@string/username"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_dark_blue">
        
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        
        <ImageView
            android:id="@+id/visibility_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/visibility_off"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/password_forgot"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/primary"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary"/>
</LinearLayout>