<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="200dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/primary">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/shapeDivider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:adjustViewBounds="true"
                android:src="@drawable/illustration_no_internet"/>
<!--            android:layout_centerInParent="true"-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/shapeDivider"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/recent_noti_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_internet"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:textSize="22sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recent_noti_tv"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:lineSpacingExtra="8dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/no_internet_detail"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/try_again_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:paddingStart="80dp"
                    android:paddingEnd="80dp"
                    android:text="@string/try_again"
                    android:textColor="@color/primary"
                    android:background="@drawable/round_back_dark_blue"/>

            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>